--- a/ietf/templates/codestand/matches/list.html
+++ b/ietf/templates/codestand/matches/list.html
@@ -20,7 +20,7 @@
 
             <!-- Breadcrumb -->
             <div class="bread-crumb pull-right">
-                <a href="{% url "ietf.codestand.views.index" %}"><i class="fa fa-home"></i> Home</a>
+                <a href="{% url 'ietf.codestand.views.index' %}"><i class="fa fa-home"></i> Home</a>
                 <!-- Divider -->
                 <span class="divider">/</span>
                 <a href="#" class="bread-current">Projects</a>
@@ -59,10 +59,6 @@
 								{% if attribute == "-creation_date" %} style="color: #A0A0A0"
 								{% else %} href="{% url template mylist '-creation_date' state %}"
 								{% endif %}>Release date</a>
-                                <!--<a href="{% url "ietf.codestand.matches.views.show_list" 'title' %}">Code Request</a> | -->
-                                <!--<a href="{% url "ietf.codestand.matches.views.show_list" 'title' %}">Protocol</a> | -->
-                                <!--<a href="{% url "ietf.codestand.matches.views.show_list" 'title' %}">Area</a> | 
-                                <a href="{% url "ietf.codestand.matches.views.show_list" 'title' %}">Working Group</a>-->
                             </div>
                             <div class="clearfix"></div>
                         </div>
@@ -71,13 +67,14 @@
                             <div class="padd">
                                 <ul class="latest-news">
                             	{% if codings %}
-                                	{% for coding, projectcontainer, coder, isOwner in codings %}
+                                	{% for coding, projectcontainer, coder, coder_id, isOwner in codings %}
 	                               		<li>
 	                                    	<!-- Title and date -->
-	                                    	<h5><a href="{% url 'show' projectcontainer.id coding.id %}">{{ coding.title }}</a> <span>by</span> <a href="#">{{ coder }}</a>
+	                                    	<h5><a href="{% url 'show' projectcontainer.id coding.id %}">{{ coding.title }}</a> <span>by</span> <a href="{% url 'ietf.codestand.accounts.views.profile' coder_id %}">{{ coder }}</a>
             		                      	{% if user.is_authenticated and isOwner %}
 					                   			<a class="label label-info" href="{% url 'ietf.codestand.matches.views.edit' projectcontainer.id coding.id %}" style="margin-left: 30px"><i class="fa fa-pencil"></i> Edit</a>
-							               		<a class="label label-warning" href="{% url 'ietf.codestand.matches.views.archive' coding.id %}" ><i class="fa fa-folder"></i>
+							               		<a class="label label-danger" href="{% url 'ietf.codestand.matches.views.delete' projectcontainer.id coding.id %}" onclick="return confirm('Are you sure you want to delete this document?');"><i class="fa fa-times"></i> Delete</a>
+                                                <a class="label label-warning" href="{% url 'ietf.codestand.matches.views.archive' coding.id %}" ><i class="fa fa-folder"></i>
                                                 {% if coding.is_archived %}                                            
                                                     Unarchive
                                                 {% else %}
@@ -86,10 +83,9 @@
                                             </a>
 											{% endif %}
 											</h5>
-	                                    	<!--<h6><a href="{% url 'show' projectcontainer.id coding.id %}">{{ coding.title }}</a> <span>by</span> <a href="#">{{ coder }}</a></h6>-->
 	                                    	<p>{{ coding.additional_information|linebreaks }}</p>
 	                                    	<p>
-	                                    	{% if projectcontainer.code_request == None %}
+	                                    	{% if projectcontainer.code_request == None or projectcontainer.is_archived or projectcontainer.is_deleted %}
 	                                    	CodeRequest: 	 <a href="#">None</a>
 	                                    	{% else %}
 	                                    	CodeRequest: 	 <a href="{% url 'ietf.codestand.requests.views.show' projectcontainer.id %}">{{ projectcontainer.title }}</a>
@@ -134,10 +130,10 @@
                             <div class="widget-foot">
                                 <p class="buttonlist">
                                 {% if user.is_authenticated %}
-                                	<a class="btn btn-default" href="{% url "ietf.codestand.matches.views.new" %}">New Project</a>
+                                	<a class="btn btn-default" href="{% url 'ietf.codestand.matches.views.new' %}">New Project</a>
                                 {% endif %}
                                 {% if codings %}
-                                	<a class="btn btn-default" href="{% url "ietf.codestand.matches.views.search" mylist %}">Search</a>
+                                	<a class="btn btn-default" href="{% url 'ietf.codestand.matches.views.search' mylist %}">Search</a>
                                 {% endif %}
                              	{% if state == "True"%}
                  					<a class="btn btn-default" href="{% url 'ietf.codestand.views.back' %}">Back</a>
