--- a/ietf/templates/codestand/matches/new.html
+++ b/ietf/templates/codestand/matches/new.html
@@ -18,6 +18,9 @@
 	#id_protocol { width: 300px; }
 	#s2id_id_doc { width: 400px; margin-bottom: 10px; }
 	#id_additional_information { width: 300px; }
+    #id_contact { width: 200px; margin-left: 10px; margin-right: 10px; } 
+    #div_contact { margin-left: 80px; margin-bottom: -40px" }   
+    #id_type { margin-left: 10px; margin-right: 10px; }  
 	#id_link { width: 300px; margin-right: 10px; margin-left: 5px; }
 	#id_name { width: 200px; margin-right: 10px; margin-left: 5px;}
   </style>
@@ -112,7 +115,7 @@
 				            				<h4><strong>Documents</strong></h4>
 											{% for doc in docs %}
 												{{ doc.document.title }}: <a  href="https://datatracker.ietf.org/doc/{{doc.name}}"> {{ doc.name }} </a>
-												<a class="label label-info" href="{% url 'ietf.codestand.requests.views.remove_document' 0 doc.name %}" >delete</a>
+												<a class="label label-info" href="{% url 'ietf.codestand.requests.views.remove_document' 0 doc.name %}" onclick="return confirm('Are you sure you want to delete this document?');">delete</a>
 												<br />
 											{% endfor %}
 										{% endif %}
@@ -150,7 +153,7 @@
 											<h4><strong>Implementations</strong></h4>
 											{% for implementation in links %}
 												<a href="{{ implementation }}">{{ implementation }}</a>
-												<a class="label label-info" href="{% url 'ietf.codestand.matches.views.remove_link' 0 implementation.link %}" >delete</a>
+												<a class="label label-info" href="{% url 'ietf.codestand.matches.views.remove_link' 0 implementation.link %}" onclick="return confirm('Are you sure you want to delete this link?');">delete</a>
 											<br />
 											{% endfor %}
 											<br />
@@ -163,6 +166,30 @@
 	                                    {% endif %}
 									</div>
 
+                                    <div>
+                                    {% if contacts %}
+                                        <h4><strong>Contacts</strong></h4>
+                                        {% for c in contacts %}
+                                            {{ c.type }}: <a  href="#"> {{ c.contact }} </a>
+                                            <a class="label label-info" href="{% url 'ietf.codestand.matches.views.remove_contact' 0 c.contact %}" onclick="return confirm('Are you sure you want to delete this contact?');">delete</a>
+                                            <br />
+                                        {% endfor %}
+                                    {% endif %}
+                                    <br />
+
+                                    </div>
+                                    {% if canaddcontact %}
+                                        <div id="div_contact">
+                                        {{ contactform }}
+                                        {% csrf_token %}
+                                        <input type="submit" name="button_contact" value="Add contact" />
+                                        </div>    
+                                    {% endif %}
+
+                                    <br />
+                                    <br />
+
+                                    <div>
 
 									<div>
 										{% if tags %}
