--- a/ietf/templates/codestand/matches/show.html
+++ b/ietf/templates/codestand/matches/show.html
@@ -21,10 +21,10 @@
 
 				<!-- Breadcrumb -->
 				<div class="bread-crumb pull-right">
-					<a href="{% url "ietf.codestand.views.index" %}" ><i class="fa fa-home"></i> Home</a>
+					<a href="{% url 'ietf.codestand.views.index' %}" ><i class="fa fa-home"></i> Home</a>
 					<!-- Divider -->
 					<span class="divider">/</span>
-					<a href="{% url "ietf.codestand.matches.views.show_list" %}" class="bread-current">Projects</a>
+					<a href="{% url 'ietf.codestand.matches.views.show_list' %}" class="bread-current">Projects</a>
 					<span class="divider">/</span>
 					<a href="#" class="bread-current">{{ coding.title }}</a>
 				</div>
@@ -67,8 +67,8 @@
 													<strong>Mentor: </strong><a href="#">{{ mentor.name }}</a>
 													<!--<strong>Mentor:</strong><a href="#">{{ projectcontainer.code_request.mentor.name }}</a>-->
 													<br />
-													{% if projectcontainer.code_request %}
-													<strong>CodeRequest: </strong><a href="{% url "ietf.codestand.requests.views.show" projectcontainer.id %}">{{projectcontainer.title}}</a>
+													{% if projectcontainer.code_request and not projectcontainer.is_archived and not projectcontainer.is_deleted %}
+													<strong>CodeRequest: </strong><a href="{% url 'ietf.codestand.requests.views.show' projectcontainer.id %}">{{projectcontainer.title}}</a>
 													{% else %}
 													<strong>CodeRequest: </strong><a>None</a>
 													{% endif %}
@@ -97,7 +97,14 @@
 								                      	{% if user.is_authenticated %}
 								                   			{% if coder == owner %}
 									                   			<a class="label label-info" href="{% url 'ietf.codestand.matches.views.edit' projectcontainer.id coding.id %}" ><i class="fa fa-pencil"></i> Edit</a>
-											               		<a class="label label-warning" href="#" ><i class="fa fa-folder"></i> Archive</a>
+                                                                <a class="label label-danger" href="{% url 'ietf.codestand.matches.views.delete' projectcontainer.id coding.id list_template %}" onclick="return confirm('Are you sure you want to delete this document?');"><i class="fa fa-times"></i> Delete</a>
+                                                                <a class="label label-warning" href="{% url 'ietf.codestand.matches.views.archive' coding.id %}" ><i class="fa fa-folder"></i>
+                                                                {% if coding.is_archived %}                                            
+                                                                    Unarchive
+                                                                {% else %}
+                                                                    Archive
+                                                                {% endif %}
+                                                                </a>    
 										               		{% endif %}
 														{% endif %}
 													</div>
