--- a/ietf/templates/codestand/requests/list.html
+++ b/ietf/templates/codestand/requests/list.html
@@ -104,15 +104,16 @@
 	                      	{% if user.is_authenticated %}
 	                   			{% if projectcontainer.owner == owner.id %}
 		                   			<a class="label label-info" href="{% url 'ietf.codestand.requests.views.edit' projectcontainer.id %}" style="margin-left: 30px"><i class="fa fa-pencil"></i> Edit</a>
-				               		    <a class="label label-warning" href="{% url 'ietf.codestand.requests.views.archive' projectcontainer.id %}" ><i class="fa fa-folder"></i> 
+                                    <a class="label label-danger" href="{% url 'ietf.codestand.requests.views.delete' projectcontainer.id %}" onclick="return confirm('Are you sure you want to delete this document?');"><i class="fa fa-times"></i> Delete</a>
+                                    <a class="label label-warning" href="{% url 'ietf.codestand.requests.views.archive' projectcontainer.id %}" ><i class="fa fa-folder"></i> 
                                     {% if projectcontainer.is_archived %}                                            
                                             Unarchive
                                     {% else %}
                                             Archive
                                     {% endif %}
-                                            </a>
+                                    </a>
 			               		{% endif %}
-		               			<a href="{% url 'ietf.codestand.matches.views.new' projectcontainer.id %}" class="label label-info" ><i class="fa fa-check"></i>Associate my project</a>
+		               			<a class="label label-info" href="{% url 'ietf.codestand.matches.views.new' projectcontainer.id %}" style="margin-left: 3px"><i class="fa fa-check" ></i> Associate my project</a>
 							{% endif %}
 			            </h5>
 	                   	<div style="margin-left:15px">
