--- a/ietf/templates/codestand/requests/show.html
+++ b/ietf/templates/codestand/requests/show.html
@@ -90,9 +90,16 @@
 			                      	{% if user.is_authenticated %}
 			                   			{% if projectcontainer.owner == owner.id %}
 				                   			<a class="label label-info" href="{% url 'ietf.codestand.requests.views.edit' projectcontainer.id %}" ><i class="fa fa-pencil"></i> Edit</a>
-						               		<a class="label label-warning" href="#" ><i class="fa fa-folder"></i> Archive</a>
+                                            <a class="label label-danger" href="{% url 'ietf.codestand.requests.views.delete' projectcontainer.id list_template %}" onclick="return confirm('Are you sure you want to delete this document?');"><i class="fa fa-times"></i> Delete</a>
+                                            <a class="label label-warning" href="{% url 'ietf.codestand.requests.views.archive' projectcontainer.id %}" ><i class="fa fa-folder"></i>
+                                            {% if projectcontainer.is_archived %}                                                 
+                                                Unarchive
+                                            {% else %}
+                                                Archive
+                                            {% endif %}
+                                            </a>    
 					               		{% endif %}
-				               			<a href="{% url 'ietf.codestand.matches.views.new' projectcontainer.id %}" class="label label-info" ><i class="fa fa-check"></i>Associate my project</a>
+				               			<a href="{% url 'ietf.codestand.matches.views.new' projectcontainer.id %}" class="label label-info" style="margin-left: 3px"><i class="fa fa-check"></i> Associate my project</a>
 									{% endif %}
 								</div>
 		                        <!-- Social Media strip -->
